Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api

spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api

    spec:
      containers:
        - name: weather-api
          image: hesamnorin/weather_api
          ports:
          - containerPort: 80
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
