Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-svc
spec:
  selector:
    app: weather-api
  ports:
  - port: 6000
    targetPort: 80
  type: LoadBalancer
